<resources>
    <string name="app_name">mVignetteApp v2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">My fleets</string>
    <string name="second_fragment_label">Add new fleet</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="details_placeholder">Loading…</string>
    <string name="button_add_text">ADD NEW</string>
    <string name="field_fleet_name">(fleet name)</string>
    <string name="fleet_details_label">Fleet</string>
    <string name="vehicle_name">myvehicle</string>
    <string name="field_vehicle_name">(vehicle name)</string>
    <string name="add_vehicle_label">Add new vehicle</string>
    <string name="field_vehicle_regplate">(registration plate)</string>
    <string name="vehicle_details_label">Vehicle</string>
    <string name="button_buy_text">BUY VIGNETTE</string>
    <string name="vignette_valid_until">Vignette valid until </string>
    <string name="buy_vignette_label">Choose duration</string>
    <string name="buy_info">This vignette will expire %s and will cost %s.</string>
</resources>