<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.mvignetteappv2.MyFleets"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/viewFleetDetails"
            app:destination="@id/FleetDetails" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.mvignetteappv2.AddFleet"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/FleetDetails"
        android:name="com.example.mvignetteappv2.FleetDetails"
        android:label="@string/fleet_details_label"
        tools:layout="@layout/fragment_fleet_details">

        <action
            android:id="@+id/action_Back_to_Home"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="FleetID"
            app:argType="string" />
        <action
            android:id="@+id/add_Vehicle"
            app:destination="@id/AddVehicle" />
        <action
            android:id="@+id/viewVehicleDetails"
            app:destination="@id/VehicleDetails" />
    </fragment>
    <fragment
        android:id="@+id/AddVehicle"
        android:name="com.example.mvignetteappv2.AddVehicle"
        android:label="@string/add_vehicle_label"
        tools:layout="@layout/fragment_add_vehicle">

        <action
            android:id="@+id/action_Back_to_Fleet"
            app:destination="@id/FleetDetails" />
        <argument
            android:name="FleetID"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/VehicleDetails"
        android:name="com.example.mvignetteappv2.VehicleDetails"
        android:label="@string/vehicle_details_label"
        tools:layout="@layout/fragment_vehicle_details">

        <action
            android:id="@+id/action_Back_to_Fleet"
            app:destination="@id/FleetDetails" />
        <argument
            android:name="VehicleID"
            app:argType="string" />
    </fragment>
</navigation>