<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVehicle">

    <EditText
        android:id="@+id/editTextVehicleName"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/field_vehicle_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_add_text"
        app:layout_constraintEnd_toEndOf="@+id/spinnerVehicleType"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVehicleType" />

    <EditText
        android:id="@+id/editTextRegPlate"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/field_vehicle_regplate"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVehicleName" />

    <Spinner
        android:id="@+id/spinnerVehicleType"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:dropDownWidth="match_parent"
        android:entries="@array/vehicle_types_array"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegPlate" />
</androidx.constraintlayout.widget.ConstraintLayout>